<resources>
    <string name="app_name">NavDrawer</string>

    <!-- Menu Hamburguesa-->
    <string name="menu_home">HOME</string>
    <string name="menu_fav">FAVORITES</string>
    <string name="menu_act">ACTIVITY</string>
    <string name="menu_cerrar">LOGOUT</string>
    <string name="menu_tema">DARK THEME</string>
    <string name="menu_info">ABOUT THE APP</string>

    <!-- Info-->
    <string name="info_desarrollo">Developed by:</string>
    <string name="info_int1">Kevin Yused Fory F.</string>
    <string name="info_int2">Daniel Alexander Lopez Ch.</string>
    <string name="info_int3">Danny Mauricio Toledo R.</string>
    <string name="info_version">Versión</string>
    <string name="info_numVersion">1.0</string>

</resources>