<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Info"
    android:background="?attr/content_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_info"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="80dp">

            <TextView
                android:id="@+id/nombreApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Signal Plus CO"
                android:layout_below="@+id/mInfo"
                android:textSize="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"
                android:textColor="?attr/text_color"
                />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="214dp"
                android:layout_height="113dp"
                android:layout_below="@+id/nombreApp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_logo"
                android:layout_marginBottom="33dp"
                app:tint="?attr/img_tint"/>
            <TextView
                android:id="@+id/mBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:text="@string/info_desarrollo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="?attr/text_color"
                />
            <TextView
                android:id="@+id/int1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_int1"
                android:layout_below="@+id/mBy"
                android:layout_centerHorizontal="true"
                android:textSize="16dp"
                android:textColor="?attr/text_color"
                />

            <TextView
                android:id="@+id/int2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/int1"
                android:layout_centerHorizontal="true"
                android:text="@string/info_int2"
                android:textSize="16dp"
                android:textColor="?attr/text_color"/>
            <TextView
                android:id="@+id/int3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_int3"
                android:layout_below="@+id/int2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:textSize="16dp"
                android:textColor="?attr/text_color"
                />
            <TextView
                android:id="@+id/mVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_version"
                android:layout_below="@+id/int3"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="?attr/text_color"
                />
            <TextView
                android:id="@+id/numVer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_numVersion"
                android:layout_below="@+id/mVersion"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:textSize="20dp"
                android:textColor="?attr/text_color"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numVer"
                android:src="@drawable/ic_acerca"
                android:layout_centerHorizontal="true"
                app:tint="?attr/img_tint_selected" />


        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?attr/content_background"
        >

        <include
            layout="@layout/menu_info"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>